Updates from PR review
- Can set save_name of images to None to avoid saving them to disk
- Updated test to use default camera parameter if None exists in the
users settings.json
- Now backing up user ViewMode so we can switch back to it

--- a/nengo_interfaces/cv_settings.json
+++ b/nengo_interfaces/cv_settings.json
@@ -4,14 +4,14 @@
     "SimMode": "ComputerVision",
     "ClockType": "",
     "ClockSpeed": 1,
-    "ViewMode": "NoDisplay",
+    "ViewMode": "",
     "RpcEnabled": true,
     "PhysicsEngineName": "",
     "SpeedUnitFactor": 1.0,
     "SpeedUnitLabel": "m/s",
     "CameraDefaults": {
         "CaptureSettings": [
-              {
+            {
                 "ImageType": 0,
                 "Width": 960,
                 "Height": 720,
@@ -24,20 +24,22 @@
                 "TargetGamma": 0.7,
                 "ProjectionMode": "",
                 "OrthoWidth": 5.12
-              }
+            }
         ]
     },
-
     "OriginGeopoint": {
         "Latitude": 43.44241131,
         "Longitude": -80.46615243,
         "Altitude": 324
     },
     "Wind": {
-        "X": 0, "Y": 0, "Z": 0
+        "X": 0,
+        "Y": 0,
+        "Z": 0
     },
-
     "ExtForce": {
-        "X": 0, "Y": 0, "Z": 0
+        "X": 0,
+        "Y": 0,
+        "Z": 0
     }
 }
