Update to NengoBones 57f40ff
57f40ff - Move license to top-level and add ABR license
30132c4 - Add proprietary license type
89f7a6f - Automatically fill in setup.py license fields
manual - Specify license explicitly

--- a/.nengobones.yml
+++ b/.nengobones.yml
@@ -4,6 +4,7 @@ repo_name: nengo/nengo-interfaces
 
 description: Simplified external input and output communication
 copyright_start: 2020
+license: abr-free
 
 license_rst: {}
 
