--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,28 @@
-*.py[co]
-.DS_Store
-_build
-build
-dist
-*.egg-info
-*~
 *.bak
+*.class
+*.dist-info/
+*.egg-info
+*.eggs/
+*.py[co]
 *.swp
-plots/
-log.txt
-.ipynb_checkpoints/
+*~
+.DS_Store
 .cache
+.coverage
+.idea
+.ipynb_checkpoints/
+.pytest_cache/
 .tox
 .vagrant
-wintest.sh
-Vagrantfile
-*.class
-*.eggs/
-.coverage
-htmlcov
-*.dist-info/
 .vscode
-.idea
-.pytest_cache/
-docs/examples/**/*.py  # For .ipynb examples converted to .py
-.ci/*.sh
+Vagrantfile
+_build
+bones-scripts
+build
+dist
 docs/.doctrees
+docs/examples/**/*.py  # For .ipynb examples converted to .py
+htmlcov
+log.txt
+plots/
+wintest.sh
